[package]
name = "pomo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cfonts = "1.1.0"
crossterm = { version = "0.26.1", features = ["event-stream"] }
time = "0.3.21"
tui = { package = "ratatui", version = "0.21.0", features = ["all-widgets"]}
